Fixed default search input bg color on iPhone

--- a/styles/scss/header.scss
+++ b/styles/scss/header.scss
@@ -79,6 +79,7 @@
               color: $c-text;
               width: 100%;
               padding: 0.5rem 0.75rem;
+              background-color: $c-white;
               border-radius: 0.5rem 0 0 0.5rem;
               border: none;
 
